[tool.poetry]
name = "dagster_plus"
version = "0.1.0"
description = "Simple dagster_plus"
authors = ["quan.dao <quan.dao@definer-inc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
dagster = ">=1.12.3,<2.0.0"
dagster-cloud = ">=1.12.3,<2.0.0"
pandas = ">=2.3.3,<3.0.0"
snowflake-connector-python = { version = "<4.0.0", extras = ["pandas"] }
snowflake-sqlalchemy = ">=1.7.7,<2.0.0"

[tool.poetry.group.dev.dependencies]
dagster-dg-cli = "*"
dagster-webserver = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
