[build-system]
requires = [
    "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "dagster-cloud"
requires-python = ">=3.10,<3.14"
dynamic = [
    "version",
]
authors = [
    { name = "Elementl", email = "support@elementl.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Operating System :: OS Independent",
]
dependencies = [
    "dagster>=1.12.3,<2.0.0",
    "dagster-cloud>=1.12.3,<2.0.0",
    "pandas>=2.3.3,<3.0.0",
    "snowflake-connector-python[pandas]<4.0.0",
    "snowflake-sqlalchemy>=1.7.7,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
    "pytest",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "tests*",
]
namespaces = false
